wiki/content/specifications/vec/V120/classes/signalsubtype.md
---
title: SignalSubType
toc: false
type: specs
date: "2019-05-05T00:00:00+01:00"
draft: false
menu_name: vec120

# Prev/next pager order (if `docs_section_pager` enabled in `params.toml`)
weight: 
---

## General Information

| Attribute               | Value |
|-------------------------|-------|
| **Owner**               | signal |
| **Applied Stereotype**  | [OpenEnumeration]({{< relref "openenumeration.md" >}})<br/>  |

## Enumeration Literals
| Name          | **Description** |
|---------------|-----------------|
| CAN | <html>   <head>     </head>   <body>     <p> &#160;Controller Area Network      </p>  </body> </html> |
| LIN | Local Interconnect Network |
| FlexRay |  |
| MOST |  |
| Ethernet |  |
| BroadR-Reach |  |
| RTPGE |  |
| APIX | <html>   <head>     </head>   <body>     <p> Automotive Pixel Link      </p>  </body> </html> |
| APIX2 |  |
| APIX3 |  |
| FBAS |  |
| USB | <html>   <head>     </head>   <body>     <p> Universal Serial&#160;Bus Version 1.X: The &quot;USB&quot; literal represents all USB 1.X Versions for USB 2.0 or USB 3.X the corresponding literals shall be used.      </p>  </body> </html> |
| USB2 | <html>   <head>     </head>   <body>     <p> Universal Serial&#160;Bus Version 2.0      </p>  </body> </html> |
| USB3.X | <html>   <head>     </head>   <body>     <p> Universal Serial&#160;Bus Version 3.X      </p>  </body> </html> |
| LVDS | <html>   <head>     </head>   <body>     <p> low-voltage differential signaling      </p>  </body> </html> |
| RGB |  |
