wiki/content/specifications/vec/v121/classes/signalsubtype.md
---
title: SignalSubType
toc: false
type: specs
date: "2021-10-18"
draft: false
specification: VEC
version: 1.2.1
documentType: "Recommendation"
elementType: Class
classes:
  - SignalSubType
menu_name: vec-1.2.1
---


## General Information

| Attribute               | Value |
|-------------------------|-------|
| **Owner**               | signal |
| **Applied Stereotype**  | [OpenEnumeration]({{< relref "openenumeration.md" >}})<br/>  |

## Enumeration Literals
| Name          | **Description** |
|---------------|-----------------|
| CAN | <p> &#160;Controller Area Network      </p> |
| LIN | Local Interconnect Network |
| FlexRay |  |
| MOST |  |
| Ethernet |  |
| BroadR-Reach |  |
| RTPGE |  |
| APIX | <p> Automotive Pixel Link      </p> |
| APIX2 |  |
| APIX3 |  |
| FBAS |  |
| USB | <p> Universal Serial&#160;Bus Version 1.X: The &quot;USB&quot; literal represents all USB 1.X Versions for USB 2.0 or USB 3.X the corresponding literals shall be used.      </p> |
| USB2 | <p> Universal Serial&#160;Bus Version 2.0      </p> |
| USB3.X | <p> Universal Serial&#160;Bus Version 3.X      </p> |
| LVDS | <p> low-voltage differential signalling      </p> |
| RGB |  |
| BTLE | <p> Bluetooth Low Energy      </p> |
| NFC | <p> Near Field Communication      </p> |
| IEEE802.11 | also: Wi-Fi, Wireless LAN |
| SignalGround |  |
| PowerGround |  |
